frontend/test/should_pass/enum_011.grg
using attrib_model_001, enum_model_004;

rule r {
	pattern {
		x:NINT - l:B -> k:A;
	}
	modify{
		eval { k.e = (k.e == te2::y) ? k.e : te::c; }
	}
}
